--- a/courses.html
+++ b/courses.html
@@ -471,7 +471,7 @@
                     <li><a href="aboutus.html">ABOUT</a></li>
                     <li><a href="#">DESIGN</a></li>
                     <li><a href="#">CONTACT</a></li>
-                    <li><a href="index1.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                 </ul>
             </div>
 
@@ -531,7 +531,7 @@
                 <div class="hh">
                     <h2 class="main">Main</h2>
                     <div class="list">
-                        <li><a href="login.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="aboutus.html">Contact</a></li>
                         <li><a href="#">Work With Us</a></li>
                         <li><a href="#">My Gear</a></li>
@@ -541,8 +541,8 @@
                 <div class="hh2">
                     <h2 class="main2">Learn</h2>
                     <div class="list2">
-                        <li><a href="login.html">Courses</a></li>
-                        <li><a href="aboutus.html">Tutorials</a></li>
+                        <li><a href="index.html">Courses</a></li>
+                        <li><a href="index.html">Tutorials</a></li>
                         <li><a href="#">Notes</a></li>
                     </div>
                 </div>
@@ -550,8 +550,8 @@
                 <div class="hh3">
                     <h2 class="main3">Legal</h2>
                     <div class="list3">
-                        <li><a href="login.html">Terms</a></li>
-                        <li><a href="aboutus.html">Privacy</a></li>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Privacy</a></li>
                         <li><a href="#">Refund</a></li>
                     </div>
                 </div>
